styles/style.css
/* ... */
.choose-card-3 {
  grid-column: 1/3;
  width: 50%;
  margin: 0 auto;
  border-radius: 16px;
  border: 1px solid rgba(233, 68, 68, 0.2);
  background: rgba(233, 68, 68, 0.05);
  padding: 30px;
}
/* why choose us sec end */
/* deals section start */
.deals-sec {
  width: 100%;
  display: flex;
  flex-direction: column;
  margin: 100px auto;
}
.deals-h1 {
  color: var(--heading-color);
  text-align: center;
  font-size: 40px;
  font-weight: 800;
  margin-bottom: 20px;
}
.deals-p {
  width: 50%;
  color: rgba(19, 19, 24, 0.7);
  text-align: center;
  font-size: 16px;
  font-weight: 400;
  line-height: 26px;
  margin: 0 auto 50px auto;
}
.deals-details {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  grid-template-rows: 500px 500px 500px;
  gap: 30px;
}
.first-deals1 {
  background-image: url(../images/malaysia.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  border-radius: 16px;
  display: flex;
  justify-content: end;
  align-items: center;
  padding-right: 40px;
}
.first-deals-details {
  width: 45%;
  border-radius: 16px;
  border: 2px solid #fff;
  background: rgba(255, 255, 255, 0.8);
  backdrop-filter: blur(2.5px);
  display: inline-flex;
  flex-direction: column;
  gap: 16px;
  padding: 50px;
}
.first-deals-first {
  display: flex;
  align-items: center;
  gap: 20px;
}
.first-deals2 {
  background-image: url(../images/hawai.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  border-radius: 16px;
  display: flex;
  justify-content: start;
  align-items: center;
  padding-left: 40px;
}
.first-deals3 {
  background-image: url(../images/bangkok.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  border-radius: 16px;
  display: flex;
  justify-content: end;
  align-items: center;
  padding-right: 40px;
}

.fd-time {
  display: flex;
  align-items: center;
  gap: 5px;
}
.fd-man {
  display: flex;
  align-items: center;
  gap: 5px;
}
.fd-location {
  display: flex;
  align-items: center;
  gap: 5px;
}
.first-deals-btn {
  align-self: flex-start;
}
.more-package-btn {
  margin-top: 50px;
  align-self: center;
}
/* deals sec end */

/* video sec start */
.video-sec {
  width: 100%;
  margin: 100px auto;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(1, 1fr);
  align-items: center;
  gap: 50px;
}
.video-sec-left > h1 {
  width: 80%;
}
.video-sec-left > p {
  width: 100%;
}
.video-sec-left-list {
  color: var(--heading-color);
  font-size: 16px;
  font-weight: 700;
  line-height: 26px;
  margin-left: 30px;
  margin-bottom: 30px;
}
.video-sec-right {
  background-image: url(../images/mountains-bd.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  border-radius: 16px;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}
.video-sec-right > h1 {
  width: 50%;
  color: #fff;
  text-align: center;
  font-size: 24px;
  font-weight: 700;
  line-height: 36px;
}
.video-sec-right > img {
  position: absolute;
  width: 95%;
  bottom: 10px;
  right: 0;
  left: 0;
  margin: 0 auto;
}
.video-sec-btn {
  border-radius: 8px;
  background: var(--primary-color);
  color: #fff;

  font-size: 16px;
  border: 0;
  font-weight: 800;
  padding: 12px 24px;
}
/* video sec end */

/* reviews-sec start */
.review-part {
  width: 100%;
  margin: 100px auto;
}
.reviews-sec {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(1, 1fr);
  gap: 50px;
}
.reviews-h1 {
  color: var(--heading-color);
  text-align: center;
  font-size: 40px;
  font-weight: 800;
  margin-bottom: 20px;
}
.reviews-p {
  width: 50%;
  color: rgba(19, 19, 24, 0.7);
  text-align: center;
  font-size: 16px;
  font-weight: 400;
  line-height: 26px;
  margin: 0 auto 50px auto;
}
.first-review-card > h1 {
  font-size: 24px;
}
.first-review-card > p {
  font-size: 14px;
  color: #5a5a5d;
}
.review-image-3 {
  width: 100%;
  background-image: url(../images/review-image-3.jpeg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  border-radius: 16px;
  height: 250px;
  color: white;
  position: relative;
}
.review-location-3 {
  display: inline-flex;
  align-items: center;
  gap: 5px;
  border-radius: 98.617px;
  background: rgba(64, 64, 64, 0.22);
  font-size: 12px;
  backdrop-filter: blur(2px);
  font-weight: 800;
  padding: 12px;
  position: absolute;
  left: 10px;
  top: 10px;
}
.review-image-2 {
  width: 100%;
  background-image: url(../images/review-image-2.jpeg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  border-radius: 16px;
  height: 250px;
  color: white;
  position: relative;
}
.review-location-2 {
  display: inline-flex;
  align-items: center;
  gap: 5px;
  border-radius: 98.617px;
  background: rgba(64, 64, 64, 0.22);
  font-size: 12px;
  backdrop-filter: blur(2px);
  font-weight: 800;
  padding: 12px;
  position: absolute;
  left: 10px;
  top: 10px;
}
.review-image-1 {
  width: 100%;
  background-image: url(../images/review-image-1.jpeg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  border-radius: 16px;
  height: 250px;
  color: white;
  position: relative;
}
.review-location-1 {
  display: inline-flex;
  align-items: center;
  gap: 5px;
  border-radius: 98.617px;
  background: rgba(64, 64, 64, 0.22);
  font-size: 12px;
  backdrop-filter: blur(2px);
  font-weight: 800;
  padding: 12px;
  position: absolute;
  left: 10px;
  top: 10px;
}
.name-star {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.person-image {
  display: flex;
  align-items: center;
  gap: 10px;
}
.person-image > img {
  width: 40px;
  width: 40px;
  border-radius: 50%;
}
.person-details > h1 {
  font-size: 18px;
}
/* ... */

